# wx_cmake_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  copy_to_project.sh
src/: CMakeLists.txt  Info.plist  main.cpp
